tests/invalid/i14_empty_program.tsl
# INVALID TEST 14: Empty file with only a comment
# Expected error: syntax error — program requires at least one task
